Fix z-index issue with main game container outside of full screen

--- a/play.css
+++ b/play.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   flex-direction: column;
   width: calc(100% - 48px);
-  z-index: auto;
+  z-index: 2;
 }
 
 #mainContainer.noSideBorders {
@@ -366,6 +366,7 @@ input[type='text'], select {
   border: none;
   background-image: none !important;
   width: 100%;
+  z-index: auto;
 }
 
 #layout:fullscreen.downscale canvas {
